2003-01-16  Miguel Sofer  <msofer@users.sf.net>

	* tkvnc.tcl (RawEncoding): slightly faster option
	* tkvnc.tcl: fixed CopyRect, RRE and Hextile encodings. 
	* tkvnc.tcl (SolidBlockFill): removed, replaced with direct
	invocation of $SCREEN
	* tkvnc.tcl (FillOutPixelCache): Changed color rescaling (too
	dark) 

2003-01-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkvnc.tcl (UpdateUI): Change 'all' bindings to ROOT to not
	trigger key events when not over the main toplevel.

	* tkvnc.tcl: Updated to use namespaces, improve speed a bit,
	clean up code.

	* tkvnc.tcl: Initial import of tkvnc into CVS
	Original author is Greg Baker of the Institute for Open Systems
	Technologies, link at http://www.ifost.org.au/Software/.
